chore: 🤖 ini web gha

--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -6,6 +6,8 @@ on:
       - "tsconfig.json"
       - "yarn.lock"
       - ".github/workflows/web.yml"
+      - "assets/**"
+      - "design/**"
       - "locales/**"
       - "packages/@types/**"
       - "packages/common/**"
