--- a/.github/workflows/ui.yml
+++ b/.github/workflows/ui.yml
@@ -56,3 +56,4 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
+          storybookBuildDir: "packages/ui/out"
