feat: 🎸 upgrade storybook version

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -33,7 +33,9 @@
     "tsc": "tsc --p tsconfig.build.json",
     "typescript": "yarn run clean && yarn run tsc",
     "ui": "firebase use main && yarn run deploy",
-    "watch": "yarn run tsc -w --preserveWatchOutput"
+    "watch": "yarn run tsc -w --preserveWatchOutput",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@hookform/resolvers": "^0.1.0",
@@ -88,26 +90,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
-    "@storybook/addon-actions": "^5.3.18",
-    "@storybook/addon-console": "^1.2.1",
-    "@storybook/addon-info": "^5.3.18",
-    "@storybook/addon-knobs": "^5.3.18",
-    "@storybook/addon-links": "^5.3.18",
-    "@storybook/addon-storysource": "^5.3.18",
-    "@storybook/addon-viewport": "^5.3.18",
-    "@storybook/addons": "^5.3.18",
-    "@storybook/cli": "^5.3.18",
-    "@storybook/react": "^5.3.18",
+    "@storybook/addon-actions": "^6.0.22",
+    "@storybook/addon-essentials": "^6.0.22",
+    "@storybook/addon-links": "^6.0.22",
+    "@storybook/react": "^6.0.22",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.0.2",
     "@testing-library/react-hooks": "^3.4.1",
     "@types/enzyme": "^3.10.5",
     "@types/enzyme-adapter-react-16": "^1.0.6",
-    "@types/storybook__addon-actions": "^5.2.1",
-    "@types/storybook__addon-info": "^5.2.1",
-    "@types/storybook__addon-knobs": "^5.2.1",
-    "@types/storybook__addon-links": "^5.2.1",
-    "@types/storybook__addon-viewport": "^5.2.1",
     "@types/storybook__react": "^5.2.1",
     "babel-loader": "^8.1.0",
     "enzyme": "^3.11.0",
@@ -115,6 +106,7 @@
     "enzyme-to-json": "^3.5.0",
     "jest": "^26.4.2",
     "react-docgen-typescript-loader": "^3.7.2",
+    "react-is": "^16.13.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^26.3.0",
     "ts-loader": "^8.0.3"
