--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "scripts": {
     "bootstrap": "lerna bootstrap",
     "build": "lerna run build --stream --scope={@sentrei/pioneer,@sentrei/typedoc}",
+    "check": "yarn run depcheck && yarn run lint && yarn run release:test",
     "clean": "lerna clean -y",
     "depcheck": "lerna exec --stream --no-bail 'yarn run depcheck .' --scope={@sentrei/common,@sentrei/ui,@sentrei/video,@sentrei/web} || true",
     "env:set:all": "yarn run env:set:alpha && yarn run env:set:beta && yarn run env:set:main",
@@ -42,11 +43,11 @@
     "prettier:fix": "prettier --write .",
     "publish:lerna": "lerna publish from-package --yes --dist-tag ${DIST_TAG}",
     "release": "semantic-release",
-    "release-test": "semantic-release -d",
+    "release:check": "semantic-release -d",
     "sentry:release": "lerna run sentry:release --stream",
     "sort-package-json:check": "sort-package-json 'package.json' 'packages/*/package.json' --check",
     "sort-package-json:fix": "sort-package-json 'package.json' 'packages/*/package.json'",
-    "test": "yarn run depcheck && yarn run lint && yarn run release-test",
+    "test": "lerna run test --stream --parallel --scope={@sentrei/functions,@sentrei/ui,@sentrei/video}",
     "typescript": "lerna run typescript --stream --scope={@sentrei/common,@sentrei/functions,@sentrei/types,@sentrei/ui,@sentrei/video}",
     "typescript:build": "lerna run typescript --stream --scope={@sentrei/common,@sentrei/types,@sentrei/ui,@sentrei/video}",
     "typescript:clean": "lerna run clean --stream --scope={@sentrei/common,@sentrei/functions,@sentrei/types,@sentrei/ui,@sentrei/video}",
