--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,15 +37,10 @@ jobs:
           scope: "@sentrei"
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-      - id: yarn-cache-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-      - id: cache
-        uses: actions/cache@v2.1.1
+      - uses: actions/cache@v2.1.1
         with:
           path: |
-            node_modules
-            */*/node_modules
-            ${{ steps.yarn-cache-path.outputs.dir }}
+            **/node_modules
           key: |
             yarn-v1-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
