--- a/.github/workflows/chatops.yml
+++ b/.github/workflows/chatops.yml
@@ -5,10 +5,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: peter-evans/slash-command-dispatch@v1
+      - uses: peter-evans/slash-command-dispatch@v2
         with:
           token: ${{ secrets.ACCESS_TOKEN }}
           reaction-token: ${{ secrets.GITHUB_TOKEN }}
           reactions: true
           config-from-file: .github/chatops.json
-          commands: deliver,deploy,enforcer,figma,gcr,lgtm,sync,test
+          commands: |
+            lgtm
+            lighthouse
+            sync
