--- a/.github/workflows/functions.yml
+++ b/.github/workflows/functions.yml
@@ -16,6 +16,7 @@ on:
       - "packages/functions/**"
 jobs:
   functions:
+    if: github.actor == 'sentrei-bot' || github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
