--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -6,6 +6,7 @@ on:
       - "infrastructure/**"
 jobs:
   terraform:
+    if: github.actor == 'sentrei-bot' || github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
