--- a/.github/workflows/ui.yml
+++ b/.github/workflows/ui.yml
@@ -16,6 +16,7 @@ on:
       - "packages/ui/**"
 jobs:
   ui:
+    if: github.actor == 'sentrei-bot' || github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
