--- a/.github/workflows/video.yml
+++ b/.github/workflows/video.yml
@@ -16,6 +16,7 @@ on:
       - "packages/video/**"
 jobs:
   video:
+    if: github.actor == 'sentrei-bot' || github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
