--- a/packages/web/vercel.json
+++ b/packages/web/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "alias": ["sentrei.com"],
   "cleanUrls": true,
-  "public": true,
+  "public": false,
   "scope": "sentrei",
   "trailingSlash": false,
   "github": {
