--- a/packages/web/cloudbuild.yaml
+++ b/packages/web/cloudbuild.yaml
@@ -3,7 +3,7 @@ steps:
   entrypoint: 'bash'
   args: [ '-c', "gcloud secrets versions access latest --secret=web_$_BASE_BRANCH --format='get(payload.data)' | tr '_-' '/+' | base64 -d > .env" ]
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/sentrei-$_BASE_BRANCH/sentrei', '.']
+  args: ['build', '-t', 'gcr.io/$PROJECT_ID/$REPO_NAME', '.']
   timeout: 500s
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/sentrei-$_BASE_BRANCH/sentrei']
+  args: ['push', 'gcr.io/$PROJECT_ID/$REPO_NAME']
