--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -43,7 +43,7 @@ jobs:
           repository: ${{ github.repository }}
           tags: ${{ env.BRANCH_NAME }}
           cache_froms: ${{ github.repository }}:${{ env.BRANCH_NAME }}
-          dockerfile: packages/web/Dockerfile
+          dockerfile: packages/web/dev.Dockerfile
           path: "."
           always_pull: true
           add_git_labels: true
