--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -51,6 +51,7 @@
     "@types/emoji-mart": "^3.0.2",
     "@types/next": "^9.0.0",
     "@types/react": "^16.9.49",
+    "@types/react-color": "^3.0.4",
     "@types/react-copy-to-clipboard": "^4.3.0",
     "@types/react-scroll": "^1.8.0",
     "@types/recharts": "^1.8.15",
