--- a/packages/video/tsconfig.build.json
+++ b/packages/video/tsconfig.build.json
@@ -5,6 +5,7 @@
   },
   "exclude": [
     "node_modules",
+    "src/setupTests.ts",
     "**/__tests__/*.ts",
     "**/__tests__/*.tsx",
     "**/*.stories.tsx",
