--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -38,7 +38,10 @@
     "sentry:release": "sentry-cli releases new -p sentrei ${SENTRY_RELEASE} && sentry-cli releases set-commits --auto ${SENTRY_RELEASE} && sentry-cli releases finalize ${SENTRY_RELEASE} && sentry-cli releases deploys ${SENTRY_RELEASE} new -e ${SENTRY_ENVIRONMENT}",
     "start": "next start",
     "swap:alpha": "cp alpha.firebase.json firebase.json",
+    "swap:alpha:env": "cp .alpha.env .env",
     "swap:beta": "cp beta.firebase.json firebase.json",
+    "swap:beta:env": "cp .beta.env .env",
+    "swap:main:env": "cp .main.env .env",
     "swap:main": "cp main.firebase.json firebase.json",
     "test": "start-server-and-test start http://localhost:3000 cypress",
     "typescript": "cd ../.. && yarn run typescript:build",
