--- a/packages/web/cloudbuild.yaml
+++ b/packages/web/cloudbuild.yaml
@@ -24,7 +24,7 @@ steps:
       [
         "run",
         "deploy",
-        "sentrei-$(echo $BRANCH_NAME | tr / -)-web",
+        "$REPO_NAME",
         "--image",
         "gcr.io/$PROJECT_ID/$REPO_NAME",
         "--region",
